[gd_scene load_steps=3 format=3 uid="uid://6m885qrym3py"]

[ext_resource type="Script" path="res://spawner.gd" id="1_ouiay"]
[ext_resource type="AudioStream" uid="uid://lyvqdfjj2jai" path="res://Sounds/Objekte/Spawner_Sound.mp3" id="2_c4yc4"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_ouiay")
respawn_delay = 20.0
audio_ = ExtResource("2_c4yc4")

[node name="Respawn_Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
attenuation = 3.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6, -42)
scale = Vector2(195.606, 217.3)

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="Respawn_Timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
